--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -573,10 +573,7 @@ Features-stack
 ========================================================================== */
 .announcements {
   .leftcol {
-    padding-right: 100px;
-  }
-  .rightcol {
-    padding-left: 100px;
+    text-align: center;
   }
 
   .time {
